# FirstAidKit

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
src/: settings.py  utils.py
src/data/: db.py  models.py  providers.py  repository.py
src/domain/: constraints.py  models.py  types.py
src/restapi/: app.py  cli.py  dto.py  main.py  query_filters.py  query_params.py
src/restapi/handlers/: __init__.py  aidkit.py  category.py  medication.py  producer.py  stock.py
src/service/: exceptions.py  producer.py  providers.py  services.py
tests/: conftest.py  utils.py
tests/unit/data/: test_repository.py
tests/unit/data/test_repository/: __init__.py  test_aidkit.py  test_generic.py  test_medication.py
tests/unit/restapi/test_handlers/: mock_response.py  test_category.py  test_medication.py  test_producer.py
tests/unit/service/test_services/: mock_data.py  test_category.py  test_medication.py  test_producer.py
